--- a/Info.plist
+++ b/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBuildDate</key>
-	<string>Thu Apr 23 12:18:08 WEST 2015</string>
+	<string>Mon May 13 18:04:15 CST 2019</string>
 	<key>CFBuildNumber</key>
-	<string>9121</string>
+	<string>9126</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDocumentTypes</key>
@@ -44,7 +44,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>9121</string>
+	<string>9126</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
